src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>Account.Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Dependent on the Account the Contact is attached to.</inlineHelpText>
        <label>Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Photo__c</fullName>
        <label>Contact Photo</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_From_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created From Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generated Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Allocated_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the id of the last sales rep that was allocated to this contact.</description>
        <label>Last Allocated Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Allocation_Date__c</fullName>
        <description>this field will contain the date in which this contact was last allocated to a specific TES representative. The reason for this is that we need to allocate all bookings that come in through this contact to the TES user throughout the day.</description>
        <label>Last Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSL_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>MSL Contact Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SD_ID__c</fullName>
        <label>SD ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Id__c</fullName>
        <formula>IF(ISNULL(SD_ID__c),
Account.School_ID__c,
23)</formula>
        <label>School Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>CALLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_If_Other__c</fullName>
        <label>Title, If Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Account Co-Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessm. Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bursar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering Mgr/Superv.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chair of Governors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chancellor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Sci. Lab. Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Director of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dep Vice Chancellor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund Raising Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold / Silver Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>MSL_Contact_Id__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>6: New This Week</label>
    </listViews>
    <listViews>
        <fullName>X1_My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>MSL_Contact_Id__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Inactive__c</columns>
        <filterScope>Mine</filterScope>
        <label>1: My Contacts</label>
    </listViews>
    <listViews>
        <fullName>X2_All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>MSL_Contact_Id__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>2: All Contacts</label>
    </listViews>
    <listViews>
        <fullName>X3_Agency_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>MSL_Contact_Id__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agency__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>3: Agency Contacts</label>
    </listViews>
    <listViews>
        <fullName>X4_Direct_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>MSL_Contact_Id__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agency__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>4: Direct Contacts</label>
    </listViews>
    <listViews>
        <fullName>X5_Inactive_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>MSL_Contact_Id__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>5: Inactive Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Success</fullName>
        <active>true</active>
        <label>Customer Success</label>
    </recordTypes>
    <recordTypes>
        <fullName>SD3_School_contact</fullName>
        <active>true</active>
        <label>SD3 School contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Contact</fullName>
        <active>true</active>
        <label>Standard Contact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Phone_LastName_Account_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name = &quot;Customer Success&quot;,
     OR(ISBLANK( Phone ), 
ISBLANK( Email ), 
        ISBLANK( AccountId ), 
        ISBLANK( LastName ),
        ISBLANK(TEXT(Salutation))
       )
   )</errorConditionFormula>
        <errorMessage>You are missing at least one of the following required fields: Employer Name, Salutation, Last Name, Email and Phone. Please complete all required fields.</errorMessage>
    </validationRules>
</CustomObject>